--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,8 +1,10 @@
 .header {
-  height: 64px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 1rem;
 }
 
 .header > img {
-  height: 50px;
+  height: 100px;
 }
