--- a/src/components/character.css
+++ b/src/components/character.css
@@ -4,17 +4,60 @@
   align-items: center;
   justify-content: space-between;
 
-  margin: 1em auto;
-  background-color: antiquewhite;
-  border-radius: 5px;
-  width: 300px;
+  margin: 2em auto;
 
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
-.card :first-child {
-  margin: 2rem;
+/* !Flip CARDS */
+/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_flip_card */
+.card__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+.card__front > :first-child {
+  margin: 1rem auto;
+}
+.card:active .card__inner {
+  transform: rotateY(180deg);
+}
+
+.card__front,
+.card__back {
+  border-radius: 5px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.card__front {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  color: black;
+}
+.card__back {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: white;
+  color: black;
+  transform: rotateY(180deg);
+}
+.card__back > :first-child {
+  margin-top: 2rem;
+}
+
 .card__title {
   font-size: 1.5rem;
   font-weight: 700;
