--- a/src/components/character.css
+++ b/src/components/character.css
@@ -53,11 +53,15 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: white;
+  background-color: #539f52;
   color: black;
   transform: rotateY(180deg);
 }
 
+.card__back > .card__title {
+  text-shadow: 2px 0px 1px #a5c64e, -2px 0px 1px #a5c64e;
+  text-shadow: 0px 2px 1px #a5c64e, -2px 0px 1px #a5c64e;
+}
 .card__title {
   font-size: 1.5rem;
   font-weight: 700;
