--- a/src/components/character.css
+++ b/src/components/character.css
@@ -24,9 +24,9 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.card:active .card__inner {
+/* .card:active .card__inner {
   transform: rotateY(180deg);
-}
+} */
 
 .card__front,
 .card__back {
