--- a/src/components/searchfield.css
+++ b/src/components/searchfield.css
@@ -1,5 +1,6 @@
 .form__input {
   height: 50px;
-  color: red;
+  color: #a5c64e;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   font-size: 1.3rem;
 }
