--- a/src/components/searchfield.css
+++ b/src/components/searchfield.css
@@ -3,4 +3,11 @@
   color: #a5c64e;
   text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
   font-size: 1.3rem;
+  border-radius: 5px;
+  background-color: rebeccapurple;
+}
+
+.form__input::placeholder {
+  color: #a5c64e;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 }
