--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,5 +1,5 @@
 .button,
-.scrollUp__button {
+.scrollUp {
   background-color: black;
   color: white;
   font-size: 1.3rem;
@@ -8,13 +8,10 @@
   padding: 0.5rem;
   margin: 1rem auto;
 }
-.scrollUp > .scrollUp__button {
-  border-radius: 50%;
+.scrollUp {
+  cursor: pointer;
   width: 60px;
   height: 60px;
-}
-
-.scrollUp {
   position: fixed;
   right: 40px;
   bottom: 50px;
