--- a/src/components/button.css
+++ b/src/components/button.css
@@ -20,3 +20,12 @@
 .button:disabled {
   background-color: grey;
 }
+
+.favouriteButton {
+  /* position: absolute;
+  left: 130px;
+  bottom: 20px; */
+  padding-left: 1rem;
+  color: gold;
+  font-size: 1.7rem;
+}
